--- a/src/app/dashboard/twitch/alerts/alerts.component.html
+++ b/src/app/dashboard/twitch/alerts/alerts.component.html
@@ -57,7 +57,7 @@
 
 <nb-card class="add-alert-card centered">
     <nb-card-body>
-        <button nbButton status="success" fullWidth (click)="addAlert()">ADD NEW alert</button>
+        <button nbButton status="success" fullWidth (click)="addAlert()">ADD NEW ALERT</button>
     </nb-card-body>
 </nb-card>
 
@@ -445,7 +445,7 @@
 
 <nb-card class="add-alert-card centered">
     <nb-card-body>
-        <button nbButton status="success" fullWidth (click)="addAlert()">ADD NEW alert</button>
+        <button nbButton status="success" fullWidth (click)="addAlert()">ADD NEW ALERT</button>
     </nb-card-body>
 </nb-card>
 
