--- a/src/themes.scss
+++ b/src/themes.scss
@@ -234,8 +234,8 @@ nb-accordion.lighter {
       padding-left: 0 !important;
       padding-right: 0 !important;
       .item-body {
-        padding-left: .2rem;
-        padding-right: .2rem;
+        padding-left: 0rem;
+        padding-right: 0rem;
       }
       nb-list-item {
         padding-left: .2rem;
