hotfixes to responsiveness

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,12 +1,11 @@
 
-<div>
-  <span class="created-by">
-    <small>©</small> {{year}} eltharynd
-   </span>
-   &nbsp;&nbsp;|&nbsp;&nbsp;
-   <a [routerLink]="['/privacy']">
-     privacy
-   </a>
+<div class="links">
+  <div class="created-by">
+    © {{year}} eltharynd
+  </div>
+  <a [routerLink]="['/privacy']">
+    privacy
+  </a>
 </div>
 
 <div class="socials">
