--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -9,13 +9,20 @@
   align-items: flex-end;
   color: nb-theme(text-hint-color);
 
-  small {
-    position: relative;
-    top: -8px;
-  } 
+
+
+  .links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    column-gap: 1rem;
+  }
 
   .socials {
     font-size: 2rem;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-end;
     
     a {
       padding: 0.4rem;
