--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -9,8 +9,8 @@
 </div>
 
 <div class="socials">
-  <a href="https://twitch.tv/eltharynd" target="_blank"><i class="fab fa-twitch"></i></a>
-  <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://discord.gg/uTmEUxGHKC" target="_blank"><i class="fab fa-discord"></i></a>
-  <a href="https://github.com/sponsors/eltharynd" target="_blank"><i class="fas fa-donate"></i></a>
+  <a href="https://twitch.tv/eltharynd" nbTooltip="Follow me on Twitch" target="_blank"><i class="fab fa-twitch"></i></a>
+  <a href="https://www.github.com/eltharynd/cCarbn" nbTooltip="Star me on Github" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://discord.gg/uTmEUxGHKC" nbTooltip="Join the Discord" target="_blank"><i class="fab fa-discord"></i></a>
+  <a href="https://github.com/sponsors/eltharynd" nbTooltip="Buy me a coffee" target="_blank"><i class="fas fa-donate"></i></a>
 </div>
