--- a/src/app/browsersource/elements/video/video.component.html
+++ b/src/app/browsersource/elements/video/video.component.html
@@ -1,19 +1,11 @@
 <div class="container" [ngStyle]="{
-    position: 'absolute',
     display: 'flex',
     width: (+viewport.width - (+viewport.padding*2))+'px',
     height: (+viewport.height - (+viewport.padding*2))+'px',
     alignItems: alignItems ? alignItems : 'center',
     justifyContent: justifyContent ? justifyContent : 'center'
 }">
-    <video *ngIf="element" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="{
-        width: element.width ? element.width+'px' : 'fit-content',
-        height: element.height ? element.height+'px' : 'fit-content',
-        marginTop: element.marginTop ? element.marginTop+'px' : null,
-        marginRight: element.marginRight ? element.marginRight+'px' : null,
-        marginBottom: element.marginBottom ? element.marginBottom+'px' : null,
-        marginLeft: element.marginLeft ? element.marginLeft+'px' : null
-    }">
+    <video *ngIf="element" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="style">
         <source [src]="element.src" (error)="onError($event)">
     </video>  
 </div>
